update from path to query all delete and update url
