# docs/swagger.json
@@ -477,7 +477,7 @@
                 }
             }
         },
-        "/api/v1/master/customer/delete/{id}": {
+        "/api/v1/master/customer/delete": {
             "delete": {
                 "security": [
                     {
@@ -500,7 +500,7 @@
                         "type": "string",
                         "description": "Delete Master Customer",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -658,7 +658,7 @@
                 }
             }
         },
-        "/api/v1/master/customer/update/{id}": {
+        "/api/v1/master/customer/update": {
             "put": {
                 "security": [
                     {
@@ -681,7 +681,7 @@
                         "type": "string",
                         "description": "Update Master Customer",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
@@ -824,7 +824,7 @@
                 }
             }
         },
-        "/api/v1/master/menu-detail-function/delete/{id}": {
+        "/api/v1/master/menu-detail-function/delete": {
             "delete": {
                 "security": [
                     {
@@ -847,7 +847,7 @@
                         "type": "string",
                         "description": "Delete Master Menu Detail Function",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -999,7 +999,7 @@
                 }
             }
         },
-        "/api/v1/master/menu-detail-function/update/{id}": {
+        "/api/v1/master/menu-detail-function/update": {
             "put": {
                 "security": [
                     {
@@ -1022,7 +1022,7 @@
                         "type": "string",
                         "description": "Update Master Menu Detail Function",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
@@ -1165,7 +1165,7 @@
                 }
             }
         },
-        "/api/v1/master/menu-detail/delete/{id}": {
+        "/api/v1/master/menu-detail/delete": {
             "delete": {
                 "security": [
                     {
@@ -1188,7 +1188,7 @@
                         "type": "string",
                         "description": "Delete Master Menu Detail",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -1340,7 +1340,7 @@
                 }
             }
         },
-        "/api/v1/master/menu-detail/update/{id}": {
+        "/api/v1/master/menu-detail/update": {
             "put": {
                 "security": [
                     {
@@ -1363,7 +1363,7 @@
                         "type": "string",
                         "description": "Update Master Menu Detail",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
@@ -1541,7 +1541,7 @@
                 }
             }
         },
-        "/api/v1/master/menu/delete/{id}": {
+        "/api/v1/master/menu/delete": {
             "delete": {
                 "security": [
                     {
@@ -1564,7 +1564,7 @@
                         "type": "string",
                         "description": "Delete Master Menu",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -1807,7 +1807,7 @@
                 }
             }
         },
-        "/api/v1/master/menu/update/{id}": {
+        "/api/v1/master/menu/update": {
             "put": {
                 "security": [
                     {
@@ -1830,7 +1830,7 @@
                         "type": "string",
                         "description": "Update Master Menu",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
@@ -1993,7 +1993,7 @@
                 }
             }
         },
-        "/api/v1/master/merchant/delete/{id}": {
+        "/api/v1/master/merchant/delete": {
             "delete": {
                 "security": [
                     {
@@ -2016,7 +2016,7 @@
                         "type": "string",
                         "description": "Delete Master Merchant",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -2162,7 +2162,7 @@
                 }
             }
         },
-        "/api/v1/master/merchant/update/{id}": {
+        "/api/v1/master/merchant/update": {
             "put": {
                 "security": [
                     {
@@ -2185,7 +2185,7 @@
                         "type": "string",
                         "description": "Update Master Merchant",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
@@ -2357,7 +2357,7 @@
                 }
             }
         },
-        "/api/v1/master/outlet/delete/{id}": {
+        "/api/v1/master/outlet/delete": {
             "delete": {
                 "security": [
                     {
@@ -2380,7 +2380,7 @@
                         "type": "string",
                         "description": "Delete Master Outlet",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -2532,7 +2532,7 @@
                 }
             }
         },
-        "/api/v1/master/outlet/update/{id}": {
+        "/api/v1/master/outlet/update": {
             "put": {
                 "security": [
                     {
@@ -2555,7 +2555,7 @@
                         "type": "string",
                         "description": "Update Master Outlet",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
@@ -2695,7 +2695,7 @@
                 }
             }
         },
-        "/api/v1/master/payment-category/delete/{id}": {
+        "/api/v1/master/payment-category/delete": {
             "delete": {
                 "security": [
                     {
@@ -2718,7 +2718,7 @@
                         "type": "string",
                         "description": "Delete Master Payment Category",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -2870,7 +2870,7 @@
                 }
             }
         },
-        "/api/v1/master/payment-category/update/{id}": {
+        "/api/v1/master/payment-category/update": {
             "put": {
                 "security": [
                     {
@@ -2893,7 +2893,7 @@
                         "type": "string",
                         "description": "Update Master Payment Category",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
@@ -3057,7 +3057,7 @@
                 }
             }
         },
-        "/api/v1/master/payment-method/delete/{id}": {
+        "/api/v1/master/payment-method/delete": {
             "delete": {
                 "security": [
                     {
@@ -3080,7 +3080,7 @@
                         "type": "string",
                         "description": "Delete Master Payment Method",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -3238,7 +3238,7 @@
                 }
             }
         },
-        "/api/v1/master/payment-method/update/{id}": {
+        "/api/v1/master/payment-method/update": {
             "put": {
                 "security": [
                     {
@@ -3261,7 +3261,7 @@
                         "type": "string",
                         "description": "Update Master Payment Method",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
@@ -3432,7 +3432,7 @@
                 }
             }
         },
-        "/api/v1/master/product-category-sub/delete/{id}": {
+        "/api/v1/master/product-category-sub/delete": {
             "delete": {
                 "security": [
                     {
@@ -3455,7 +3455,7 @@
                         "type": "string",
                         "description": "Delete Master Product Category Sub",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -3619,7 +3619,7 @@
                 }
             }
         },
-        "/api/v1/master/product-category-sub/update/{id}": {
+        "/api/v1/master/product-category-sub/update": {
             "put": {
                 "security": [
                     {
@@ -3642,7 +3642,7 @@
                         "type": "string",
                         "description": "Update Master Product Category Sub",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
@@ -3782,7 +3782,7 @@
                 }
             }
         },
-        "/api/v1/master/product-category/delete/{id}": {
+        "/api/v1/master/product-category/delete": {
             "delete": {
                 "security": [
                     {
@@ -3805,7 +3805,7 @@
                         "type": "string",
                         "description": "Delete Master Product Category",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -3963,7 +3963,7 @@
                 }
             }
         },
-        "/api/v1/master/product-category/update/{id}": {
+        "/api/v1/master/product-category/update": {
             "put": {
                 "security": [
                     {
@@ -3986,7 +3986,7 @@
                         "type": "string",
                         "description": "Update Master Product Category",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
@@ -4126,7 +4126,7 @@
                 }
             }
         },
-        "/api/v1/master/role/delete/{id}": {
+        "/api/v1/master/role/delete": {
             "delete": {
                 "security": [
                     {
@@ -4149,7 +4149,7 @@
                         "type": "string",
                         "description": "Delete Master Role",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -4307,7 +4307,7 @@
                 }
             }
         },
-        "/api/v1/master/role/update/{id}": {
+        "/api/v1/master/role/update": {
             "put": {
                 "security": [
                     {
@@ -4330,7 +4330,7 @@
                         "type": "string",
                         "description": "Update Master Role",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
@@ -4470,7 +4470,7 @@
                 }
             }
         },
-        "/api/v1/master/sales/delete/{id}": {
+        "/api/v1/master/sales/delete": {
             "delete": {
                 "security": [
                     {
@@ -4493,7 +4493,7 @@
                         "type": "string",
                         "description": "Delete Master Sales",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -4651,7 +4651,7 @@
                 }
             }
         },
-        "/api/v1/master/sales/update/{id}": {
+        "/api/v1/master/sales/update": {
             "put": {
                 "security": [
                     {
@@ -4674,7 +4674,7 @@
                         "type": "string",
                         "description": "Update Master Sales",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
@@ -4814,7 +4814,7 @@
                 }
             }
         },
-        "/api/v1/master/supplier/delete/{id}": {
+        "/api/v1/master/supplier/delete": {
             "delete": {
                 "security": [
                     {
@@ -4837,7 +4837,7 @@
                         "type": "string",
                         "description": "Delete Master Supplier",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -4995,7 +4995,7 @@
                 }
             }
         },
-        "/api/v1/master/supplier/update/{id}": {
+        "/api/v1/master/supplier/update": {
             "put": {
                 "security": [
                     {
@@ -5018,7 +5018,7 @@
                         "type": "string",
                         "description": "Update Master Supplier",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
@@ -5158,7 +5158,7 @@
                 }
             }
         },
-        "/api/v1/master/uom-type/delete/{id}": {
+        "/api/v1/master/uom-type/delete": {
             "delete": {
                 "security": [
                     {
@@ -5181,7 +5181,7 @@
                         "type": "string",
                         "description": "Delete Master UOM Type",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -5333,7 +5333,7 @@
                 }
             }
         },
-        "/api/v1/master/uom-type/update/{id}": {
+        "/api/v1/master/uom-type/update": {
             "put": {
                 "security": [
                     {
@@ -5356,7 +5356,7 @@
                         "type": "string",
                         "description": "Update Master UOM Type",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
@@ -5496,7 +5496,7 @@
                 }
             }
         },
-        "/api/v1/master/uom/delete/{id}": {
+        "/api/v1/master/uom/delete": {
             "delete": {
                 "security": [
                     {
@@ -5519,7 +5519,7 @@
                         "type": "string",
                         "description": "Delete Master UOM",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -5677,7 +5677,7 @@
                 }
             }
         },
-        "/api/v1/master/uom/update/{id}": {
+        "/api/v1/master/uom/update": {
             "put": {
                 "security": [
                     {
@@ -5700,7 +5700,7 @@
                         "type": "string",
                         "description": "Update Master UOM",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
@@ -5840,7 +5840,7 @@
                 }
             }
         },
-        "/api/v1/master/user-outlet/delete/{id}": {
+        "/api/v1/master/user-outlet/delete": {
             "delete": {
                 "security": [
                     {
@@ -5863,7 +5863,7 @@
                         "type": "string",
                         "description": "Delete User Outlet",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -6021,7 +6021,7 @@
                 }
             }
         },
-        "/api/v1/master/user-outlet/update/{id}": {
+        "/api/v1/master/user-outlet/update": {
             "put": {
                 "security": [
                     {
@@ -6044,7 +6044,7 @@
                         "type": "string",
                         "description": "Update User Outlet",
                         "name": "id",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     },
                     {
