# handlers/handler.customer.go
@@ -227,7 +227,7 @@ func (h *handleCustomer) HandlerResult(ctx *gin.Context) {
 // @Tags		Master Customer
 // @Accept		json
 // @Produce		json
-// @Param		id path string true "Delete Master Customer"
+// @Param		id query string true "Delete Master Customer"
 // @Success 200 {object} schemes.Responses
 // @Failure 400 {object} schemes.Responses400Example
 // @Failure 401 {object} schemes.Responses401Example
@@ -236,10 +236,10 @@ func (h *handleCustomer) HandlerResult(ctx *gin.Context) {
 // @Failure 409 {object} schemes.Responses409Example
 // @Failure 500 {object} schemes.Responses500Example
 // @Security	ApiKeyAuth
-// @Router /api/v1/master/customer/delete/{id} [delete]
+// @Router /api/v1/master/customer/delete [delete]
 func (h *handleCustomer) HandlerDelete(ctx *gin.Context) {
 	var body schemes.Customer
-	id := ctx.Param("id")
+	id := ctx.DefaultQuery("id", constants.EMPTY_VALUE)
 	body.ID = id
 
 	errors, code := ValidatorCustomer(ctx, body, "delete")
@@ -275,7 +275,7 @@ func (h *handleCustomer) HandlerDelete(ctx *gin.Context) {
 // @Tags		Master Customer
 // @Accept		json
 // @Produce		json
-// @Param		id path string true "Update Master Customer"
+// @Param		id query string true "Update Master Customer"
 // @Param		customer body schemes.CustomerRequest true "Update Master Customer"
 // @Success 200 {object} schemes.Responses
 // @Failure 400 {object} schemes.Responses400Example
@@ -285,13 +285,13 @@ func (h *handleCustomer) HandlerDelete(ctx *gin.Context) {
 // @Failure 409 {object} schemes.Responses409Example
 // @Failure 500 {object} schemes.Responses500Example
 // @Security	ApiKeyAuth
-// @Router /api/v1/master/customer/update/{id} [put]
+// @Router /api/v1/master/customer/update [put]
 func (h *handleCustomer) HandlerUpdate(ctx *gin.Context) {
 	var (
 		body      schemes.Customer
 		activeGet = false
 	)
-	id := ctx.Param("id")
+	id := ctx.DefaultQuery("id", constants.EMPTY_VALUE)
 	body.ID = id
 	body.Name = ctx.PostForm("name")
 	body.Description = ctx.PostForm("description")
