# handlers/handler.productcategory.go
@@ -198,7 +198,7 @@ func (h *handleProductCategory) HandlerResults(ctx *gin.Context) {
 // @Tags		Master Product Category
 // @Accept		json
 // @Produce		json
-// @Param		id path string true "Delete Master Product Category"
+// @Param		id query string true "Delete Master Product Category"
 // @Success 200 {object} schemes.Responses
 // @Failure 400 {object} schemes.Responses400Example
 // @Failure 401 {object} schemes.Responses401Example
@@ -207,10 +207,10 @@ func (h *handleProductCategory) HandlerResults(ctx *gin.Context) {
 // @Failure 409 {object} schemes.Responses409Example
 // @Failure 500 {object} schemes.Responses500Example
 // @Security	ApiKeyAuth
-// @Router /api/v1/master/product-category/delete/{id} [delete]
+// @Router /api/v1/master/product-category/delete [delete]
 func (h *handleProductCategory) HandlerDelete(ctx *gin.Context) {
 	var body schemes.ProductCategory
-	id := ctx.Param("id")
+	id := ctx.DefaultQuery("id", constants.EMPTY_VALUE)
 	body.ID = id
 
 	errors, code := ValidatorProductCategory(ctx, body, "delete")
@@ -246,7 +246,7 @@ func (h *handleProductCategory) HandlerDelete(ctx *gin.Context) {
 // @Tags		Master Product Category
 // @Accept		json
 // @Produce		json
-// @Param		id path string true "Update Master Product Category"
+// @Param		id query string true "Update Master Product Category"
 // @Param		productcategory body schemes.ProductCategoryRequest true "Update Master Product Category"
 // @Success 200 {object} schemes.Responses
 // @Failure 400 {object} schemes.Responses400Example
@@ -256,13 +256,13 @@ func (h *handleProductCategory) HandlerDelete(ctx *gin.Context) {
 // @Failure 409 {object} schemes.Responses409Example
 // @Failure 500 {object} schemes.Responses500Example
 // @Security	ApiKeyAuth
-// @Router /api/v1/master/product-category/update/{id} [put]
+// @Router /api/v1/master/product-category/update [put]
 func (h *handleProductCategory) HandlerUpdate(ctx *gin.Context) {
 	var (
 		body      schemes.ProductCategory
 		activeGet = false
 	)
-	id := ctx.Param("id")
+	id := ctx.DefaultQuery("id", constants.EMPTY_VALUE)
 	body.ID = id
 	body.Name = ctx.PostForm("name")
 	body.MerchantID = ctx.PostForm("merchant_id")
