# handlers/handler.supplier.go
@@ -227,7 +227,7 @@ func (h *handleSupplier) HandlerResult(ctx *gin.Context) {
 // @Tags		Master Supplier
 // @Accept		json
 // @Produce		json
-// @Param		id path string true "Delete Master Supplier"
+// @Param		id query string true "Delete Master Supplier"
 // @Success 200 {object} schemes.Responses
 // @Failure 400 {object} schemes.Responses400Example
 // @Failure 401 {object} schemes.Responses401Example
@@ -236,10 +236,10 @@ func (h *handleSupplier) HandlerResult(ctx *gin.Context) {
 // @Failure 409 {object} schemes.Responses409Example
 // @Failure 500 {object} schemes.Responses500Example
 // @Security	ApiKeyAuth
-// @Router /api/v1/master/supplier/delete/{id} [delete]
+// @Router /api/v1/master/supplier/delete [delete]
 func (h *handleSupplier) HandlerDelete(ctx *gin.Context) {
 	var body schemes.Supplier
-	id := ctx.Param("id")
+	id := ctx.DefaultQuery("id", constants.EMPTY_VALUE)
 	body.ID = id
 
 	errors, code := ValidatorSupplier(ctx, body, "delete")
@@ -275,7 +275,7 @@ func (h *handleSupplier) HandlerDelete(ctx *gin.Context) {
 // @Tags		Master Supplier
 // @Accept		json
 // @Produce		json
-// @Param		id path string true "Update Master Supplier"
+// @Param		id query string true "Update Master Supplier"
 // @Param		supplier body schemes.SupplierRequest true "Update Master Supplier"
 // @Success 200 {object} schemes.Responses
 // @Failure 400 {object} schemes.Responses400Example
@@ -285,13 +285,13 @@ func (h *handleSupplier) HandlerDelete(ctx *gin.Context) {
 // @Failure 409 {object} schemes.Responses409Example
 // @Failure 500 {object} schemes.Responses500Example
 // @Security	ApiKeyAuth
-// @Router /api/v1/master/supplier/update/{id} [put]
+// @Router /api/v1/master/supplier/update [put]
 func (h *handleSupplier) HandlerUpdate(ctx *gin.Context) {
 	var (
 		body      schemes.Supplier
 		activeGet = false
 	)
-	id := ctx.Param("id")
+	id := ctx.DefaultQuery("id", constants.EMPTY_VALUE)
 	body.ID = id
 	body.Name = ctx.PostForm("name")
 	body.Description = ctx.PostForm("description")
